# first_erdos_problem

./: CMakeLists.txt  README.md  erdos_results.db
include/: backtrack_solver.h  db_manager.h  logger.h  subset_sum_manager.h  types.h
src/: backtrack_solver.c  db_manager.c  logger.c  main.c  subset_sum_manager.c
